# Research-M

./: .gitmodules  CMakeLists.txt  README.md  make_project.py
ResearchM/: ResearchM.cmake  ResearchM_config.h.in
build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ResearchMExamples.sln  ResearchM_config.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  math_data_path.h
build2/examples/math/cuda_math_array/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  cuda_math_array.sln  cuda_math_array.vcxproj  cuda_math_array.vcxproj.filters
build2/examples/math/dense_vector/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  dense_vector.sln  dense_vector.vcxproj  dense_vector.vcxproj.filters
build2/examples/math/homology/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  homology.sln  homology.vcxproj  homology.vcxproj.filters
build2/examples/math/homology_example/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  homology_example.sln  homology_example.vcxproj  homology_example.vcxproj.filters
build2/examples/math/matrix/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  matrix.sln  matrix.vcxproj  matrix.vcxproj.filters
build2/examples/math/persistent_homology/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  persistent_homology.sln  persistent_homology.vcxproj  persistent_homology.vcxproj.filters
build2/examples/math/quaternion/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  quaternion.sln  quaternion.vcxproj  quaternion.vcxproj.filters
build2/examples/math/sparse_matrix/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  sparse_matrix.sln  sparse_matrix.vcxproj  sparse_matrix.vcxproj.filters
build2/examples/utils/test_cuda/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  test_cuda.sln  test_cuda.vcxproj  test_cuda.vcxproj.filters
examples/: math_data_path.h.in
examples/math/cuda_math_array/: CMakeLists.txt  cuda_math_array.cpp  cuda_math_array.cu
examples/math/dense_vector/: dense_vector.cpp
examples/math/homology/: homology.cpp
examples/math/homology_example/: CMakeLists.txt  homology_example.cpp
examples/math/math_cluster/: CMakeLists.txt  math_cluster.cpp
examples/math/math_io_test/: CMakeLists.txt  math_io_test.cpp
examples/math/matrix/: CMakeLists.txt  matrix.cpp
examples/math/persistent_homology/: homology.cpp
examples/math/quaternion/: quaternion.cpp
examples/math/sparse_matrix/: sparse_matrix.cpp
examples/utils/test_cuda/: CMakeLists.txt  test_cuda.cpp  test_cuda.cu
examples/utils/test_json/: CMakeLists.txt  test_json.cpp
zqBasicMath/: math_LS_regression.h  math_MLS_regression.h  math_cluster.h  math_const.h  math_dense.h  math_dense_solver.h  math_distance.h  math_filter.h  math_fixed_matrix.h  math_homology.h  math_io.h  math_kernel.h  math_lookup_table.h  math_mapper.h  math_matrix.h  math_matrix_utils.h  math_numerical_utils.h  math_quaternion.h  math_sparse_convert.h  math_sparse_matrix.h  math_sparse_vector.h  math_type_promote.h  math_utils.h  math_vector.h  math_vector_utils.h  math_weight.h  zqBasicMath.cmake
zqBasicUtils/: utils_array.h  utils_array_func.h  utils_ascii_table.h  utils_aux_func.h  utils_common.h  utils_cuda.h  utils_hash.h  utils_io.h  utils_json.h  utils_lookup_table.h  utils_reorder.h  utils_timer.h  zqBasic.cmake  zqBasicUtils.cmake
